# eyck

./: .gitignore  dist.sh  pyproject.toml
src/eyck/: __init__.py  encoder.py  targets.py
src/eyck/flow/: __init__.py  flow.py  memorymap.py  objects.py
src/eyck/modalities/: __init__.py
src/eyck/modalities/clustering/: clustering.py
src/eyck/modalities/folds/: folds.py
src/eyck/modalities/fragments/: fragments.py  view.py
src/eyck/modalities/fragments/loaders/: __init__.py  helpers.c  loaders.py
src/eyck/modalities/gradient/: gradient.py
src/eyck/modalities/regions/: __init__.py
src/eyck/modalities/transcriptome/: __init__.py  data.py  diffexp.py  plot.py  timetranscriptome.py  tools.py
src/eyck/processes/: __init__.py
src/eyck/processes/cellcycle/: __init__.py
src/eyck/utils/: __init__.py  files.py
